<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.yashshah.musicalstructure.RecentlyPlayedActivity">

    <LinearLayout
        android:id="@+id/activity_recently_played"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            style="@style/DescriptionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_recently_played" />

        <Button
            android:id="@+id/button_playlist_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_marginTop"
            android:text="@string/playlist_1" />

        <Button
            android:id="@+id/button_playlist_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/playlist_2" />

        <Button
            android:id="@id/button_song_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/song_1" />

        <Button
            android:id="@id/button_song_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/song_2" />

        <Button
            android:id="@id/button_now_playing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/now_playing" />

    </LinearLayout>

</ScrollView>

