<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.yashshah.musicalstructure.NowPlayingActivity">

    <LinearLayout
        android:id="@+id/activity_now_playing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            style="@style/DescriptionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_now_playing" />

        <Button
            android:id="@+id/button_rewind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_marginTop"
            android:text="@string/rewind" />

        <Button
            android:id="@+id/button_play_pause"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play_pause" />

        <Button
            android:id="@+id/button_forward"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forward" />

        <Button
            android:id="@+id/button_library"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/library" />

    </LinearLayout>

</ScrollView>


